--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "Ihor Pele",
   "license": "ISC",
   "dependencies": {
+    "@apollo/datasource-rest": "^6.2.2",
     "@apollo/server": "^4.10.0",
+    "@graphql-codegen/typescript-mongodb": "^3.0.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "graphql": "^16.8.1",
@@ -29,6 +31,7 @@
     "@graphql-codegen/typescript-resolvers": "4.0.6",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.11.20",
     "@types/validator": "^13.11.9",
